@@ -4,6 +4,8 @@ Change log for zeit.web
 2.39 (unreleased)
 -----------------
 
+- ZON-2561: Force mobile image for first teaser of authors favorite articles
+
 - FIX: Display bylines on ranking area teasers
 
 
